--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "tysun-portal",
+  "name": "tmikepro-portal",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
+  "dependencies": {
+  "@google/generative-ai": "^0.16.0",
   "scripts": {
     "start": "node server.js",
     "dev": "NODE_ENV=development node server.js",
@@ -10,7 +12,7 @@
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,json,md}\""
   },
-  "dependencies": {
+  "devDependencies": {
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
