--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "tmikepro-portal",
+  "name": "production-website",
   "version": "1.0.0",
+  "description": "A full-stack, production-ready website with auth, payments, and AI.",
   "main": "server.js",
-  "type": "module",
-  "dependencies": {
-  "@google/generative-ai": "^0.16.0",
   "scripts": {
     "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
-    "format": "prettier --write \"**/*.{js,json,md}\""
+    "dev": "nodemon server.js"
   },
-  "devDependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@google/generative-ai": "^0.15.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^7.0.0",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
-    "pg": "^8.11.3"
+    "nodemailer": "^6.9.14",
+    "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
