--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
   "name": "production-website",
   "version": "1.0.0",
-  "description": "A full-stack, production-ready website with auth, payments, and AI.",
+  "description": "Top-tier production website with full backend services.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "production",
+    "node",
+    "express",
+    "postgres",
+    "gemini",
+    "paypal"
+  ],
+  "author": "Tysun Mike Productions",
+  "license": "UNLICENSED",
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0"
   },
   "devDependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3"
     "nodemon": "^3.1.4"
   }
 }
